@@ -8,7 +8,8 @@
  * Always try to create a new session in case the old one has been imported regardless of the inserted
    medium's free space.
  * Fixed DVD-RW Restricted Overwrite media handling
-
+ * Use RAW writing mode for audio CDs in cse the writer does not support DAO but RAW.
+	
 0.12.3
 ======
  * Ignore dock config from K3b versions older than 0.12
